--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -11,6 +11,7 @@
         <div class="col-sm-8">
             <%= render 'microposts/microposts', microposts: @microposts %>
         </div>
+    </div>
 <% else %>
 <div class="center jumbotron">
     <div class="text-center">
